@@ -174,6 +174,8 @@ TtHFit::TtHFit(string name){
     
     fGetGoodnessOfFit = false;
     fGetChi2 = 0; // 0: no, 1: stat-only, 2: with syst
+    
+    fCustomFunctions.clear();
 }
 
 //__________________________________________________________________________________
@@ -916,6 +918,9 @@ void TtHFit::ReadConfigFile(string fileName,string options){
         std::transform(param.begin(), param.end(), param.begin(), ::toupper);
         if(      param == "TRUE" )  fDoPieChartPlot = true;
         else if( param == "FALSE" ) fDoPieChartPlot = false;
+    }
+    param = cs->Get("CustomFunctions"); if( param != "" ) {
+        fCustomFunctions = Vectorize(param,',');
     }
     
     //
@@ -2159,6 +2164,12 @@ void TtHFit::ReadNtuples(){
     vector<string> fullPaths;
     vector<string> empty; empty.clear();
     SampleHist *sh;
+    //
+    // Import custom functions from .C files
+    //
+    for(auto file : fCustomFunctions){
+        gROOT->ProcessLineSync((".x "+file+"+").c_str());
+    }
     //
     // Loop on regions and samples
     //
@@ -4214,14 +4225,14 @@ TthPlot* TtHFit::DrawSummary(string opt, TthPlot* prefit_plot){
                     }
                     //
                     integral = h->IntegralAndError(1,h->GetNbinsX(),intErr);
+                    // this becuase MC stat is taken into account by the gammas
+                    if( (isPostFit && fUseGammaPulls) || !fUseStatErr || (!sh->fSample->fUseMCStat && !sh->fSample->fSeparateGammas))
+                        intErr = 0.;
                 }
                 else{
                     integral = 0.;
                     intErr   = 0.;
                 }
-                // this becuase MC stat is taken into account by the gammas
-                if( (isPostFit && fUseGammaPulls) || !fUseStatErr || (!sh->fSample->fUseMCStat && !sh->fSample->fSeparateGammas))
-                    intErr = 0.;
                 h_sig[Nsig]->SetBinContent( i_bin,integral );
                 h_sig[Nsig]->SetBinError( i_bin,intErr );
             }
@@ -5053,7 +5064,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                 //
                 if(sh!=0x0){
                     if(isPostFit){
-                        if(syst_idx<0){
+                        if(syst_idx<0 || sh->GetSystematic(systName)==0x0){
                             h_tmp_Up   = sh->fHist_postFit;
                             h_tmp_Down = sh->fHist_postFit;
                         }
@@ -5063,7 +5074,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                         }
                     }
                     else {
-                        if(syst_idx<0){
+                        if(syst_idx<0 || sh->GetSystematic(systName)==0x0){
                             h_tmp_Up   = sh->fHist;
                             h_tmp_Down = sh->fHist;
                         }
@@ -5090,7 +5101,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                     if(sh==0x0) continue;
                     if(idxVec[j_smp]==i_smp && i_smp!=j_smp){
                         if(isPostFit){
-                            if(syst_idx<0){
+                            if(syst_idx<0 || sh->GetSystematic(systName)==0x0){
                                 h_tmp_Up   = sh->fHist_postFit;
                                 h_tmp_Down = sh->fHist_postFit;
                             }
@@ -5100,7 +5111,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                             }
                         }
                         else{
-                            if(syst_idx<0){
+                            if(syst_idx<0 || sh->GetSystematic(systName)==0x0){
                                 h_tmp_Up   = sh->fHist;
                                 h_tmp_Down = sh->fHist;
                             }
@@ -5143,7 +5154,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                     //
                     if(sh!=0x0){
                         if(isPostFit){
-                            if(syst_idx<0){
+                            if(syst_idx<0 || sh->GetSystematic(gammaName)==0x0){
                                 h_tmp_Up   = sh->fHist_postFit;
                                 h_tmp_Down = sh->fHist_postFit;
                             }
@@ -5153,7 +5164,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                             }
                         }
                         else {
-                            if(syst_idx<0){
+                            if(syst_idx<0 || sh->GetSystematic(gammaName)==0x0){
                                 h_tmp_Up   = sh->fHist;
                                 h_tmp_Down = sh->fHist;
                             }
@@ -5178,7 +5189,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                         if(sh!=0){
                             if(idxVec[j_smp]==i_smp && i_smp!=j_smp){
                                 if(isPostFit){
-                                    if(syst_idx<0){
+                                    if(syst_idx<0 || sh->GetSystematic(gammaName)==0x0){
                                         h_tmp_Up   = sh->fHist_postFit;
                                         h_tmp_Down = sh->fHist_postFit;
                                     }
@@ -5188,7 +5199,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                                     }
                                 }
                                 else{
-                                    if(syst_idx<0){
+                                    if(syst_idx<0 || sh->GetSystematic(gammaName)==0x0){
                                         h_tmp_Up   = sh->fHist;
                                         h_tmp_Down = sh->fHist;
                                     }
@@ -5226,7 +5237,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                     //
                     if(sh!=0x0){
                         if(isPostFit){
-                            if(syst_idx<0){
+                            if(syst_idx<0 || sh->GetSystematic(normName)==0x0){
                                 h_tmp_Up   = sh->fHist_postFit;
                                 h_tmp_Down = sh->fHist_postFit;
                             }
@@ -5236,7 +5247,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                             }
                         }
                         else {
-                            if(syst_idx<0){
+                            if(syst_idx<0 || sh->GetSystematic(normName)==0x0){
                                 h_tmp_Up   = sh->fHist;
                                 h_tmp_Down = sh->fHist;
                             }
@@ -5263,7 +5274,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                         if(sh!=0){
                             if(idxVec[j_smp]==i_smp && i_smp!=j_smp){
                                 if(isPostFit){
-                                    if(syst_idx<0){
+                                    if(syst_idx<0 || sh->GetSystematic(normName)==0x0){
                                         h_tmp_Up   = sh->fHist_postFit;
                                         h_tmp_Down = sh->fHist_postFit;
                                     }
@@ -5273,7 +5284,7 @@ void TtHFit::BuildYieldTable(string opt,string group){
                                     }
                                 }
                                 else{
-                                    if(syst_idx<0){
+                                    if(syst_idx<0 || sh->GetSystematic(normName)==0x0){
                                         h_tmp_Up   = sh->fHist;
                                         h_tmp_Down = sh->fHist;
                                     }
